- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.10.1
- 
    None
- 
    Qt installed from Arch linux package, client code is KDE Connect. Also see [https://phabricator.kde.org/D12153] for the workaround.
I set up a connection to an android device. The device transfers data using a RfcComm connection. The transfer succeeds (on Android), but usually, it fails on the Desktop (Bluez backend).
The connection fails with this error:
qt.bluetooth.bluez: void QBluetoothSocketPrivate::_q_readNotify() 19 error: -1 "Connection reset by peer"
Manually connecting QBluetoothSocket::disconnected to QBluetoothSocket::readyRead and QBluetoothSocket::readChannelFinished fixes the issue. My (badly informed) guess would be that there's still some data to be read, but the "connection closed" gets processed without reading the remaining data.
| For Gerrit Dashboard: QTBUG-67672 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 227530,4 | Add missing emission of readChannelFinished() | 5.11 | qt/qtconnectivity | Status: MERGED | +2 | 0 |