Add missing emission of readChannelFinished()

This fixes the problem for all supported platforms.

Task-number: QTBUG-67672
Change-Id: I9cecfbe8a73df46070293eba1870ea3bee738b7b
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
Reviewed-by: Timur Pocheptsov <timur.pocheptsov@qt.io>